--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
   <link rel="stylesheet" href="assets/css/owl.css" />
   <link rel="stylesheet" href="assets/css/lightbox.css" />
 </head>
-<!--
-Tooplate 2116 Blugoon
-https://www.tooplate.com/view/2116-blugoon
--->
+
 
 <body>
   <div id="page-wraper">
@@ -33,40 +30,26 @@ https://www.tooplate.com/view/2116-blugoon
             <a href="#"><img src="assets/images/venkat.jpeg" alt="Blugoon by Tooplate" /></a>
           </div>
           <div class="author-content">
-            <!-- <h4>Blugoon</h4> -->
             <h4>Portfolio</h4>
           </div>
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
               <li><a href="#section1">Intro</a></li>
               <li><a href="#section2">Project</a></li>
-              <!-- <li><a href="#section3">Gallery</a></li> -->
               <li><a href="#section4">Contact</a></li>
             </ul>
           </nav>
           <div class="social-network">
             <ul class="soial-icons">
-              <!-- <li>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                </li> -->
               <li>
                 <a href="https://twitter.com/home"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a>
               </li>
-              <!-- <li>
-                  <a href="#"><i class="fa fa-dribbble"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-rss"></i></a> -->
               </li>
             </ul>
           </div>
-          <!-- <div class="copyright-text">
-              <p>Copyright 2020 Blugoon<br>
-              Design: Tooplate</p>
-            </div> -->
         </div>
       </div>
     </div>
@@ -93,10 +76,6 @@ https://www.tooplate.com/view/2116-blugoon
                   I would like to work smart and bring out changes in my working environment to improve myself and my
                   team. Moreover, I want to accomplish efficiency, precision in my work and become well known in my
                   space.</p>
-                <!-- <p>All photos in this template are from <a rel="nofollow" href="https://www.pexels.com">Pexels</a> website. Blugoon HTML Template is provided by Tooplate. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p> -->
-                <!-- <div class="white-button">
-                    <a href="#">Read More</a>
-                  </div> -->
               </div>
             </div>
             <div class="col-md-4">
@@ -123,10 +102,6 @@ https://www.tooplate.com/view/2116-blugoon
                   punctual in work. Communicating with me and giving more information on
                   work would encourage me to give the best output. Furthermore, I can manage teams and collaborate with
                   others easily..</p>
-                <!-- <p>Ut imperdiet massa at enim tempus volutpat. Nullam gravida augue quis facilisis commodo. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p> -->
-                <!-- <div class="white-button">
-                     <a href="#">Read More</a>
-                  </div> -->
               </div>
             </div>
 
@@ -184,9 +159,11 @@ https://www.tooplate.com/view/2116-blugoon
               <h4>WEEK-4</h4>
               <p> This week we need to work on question generation. For that we created few own questions to find out
                 various types of parsing patterns based using dependency parsing manually. The process we need to follow
-                to code is first we need to implement dependency parsing to find "nsub"; next we need to check the named
-                entities to replace the interlink "WH" in the sentence. Lastly, we should bring out the "WH" questions
-                continued with candidate phrase.</p>
+                to
+                code is first we need to implement dependency parsing to find "nsub"; next we need to check the named
+                entities
+                to replace the interlink "WH" in the sentence. Lastly, we should bring out the "WH" questions continued
+                with candidate phrase.</p>
             </div>
           </div>
 
@@ -194,183 +171,98 @@ https://www.tooplate.com/view/2116-blugoon
             <div class="service-item">
               <i class="fa fa-support"></i>
               <h4>WEEK-5</h4>
-              <p> This week we Implemented the question generation code. We implemented dependency parsing to find "nsub"
-                using spacy and using "ENT" and based on the "PERSON" AND "GPE" we found out named entities. Later we
-                replaced the "nsub" entities with "WH" in the question using indexing. In the output we the user would be
-                asked to give out text file to generate questions.</p>
+              <p> This week we Implemented the question generation code. We implemented dependency parsing to find
+                "nsub"
+                using spacy and u
+                sing "ENT" and based on the "PERSON" AND "GPE" we found out named entities. Later we replaced the "nsub"
+                entities
+                with "WH" in the question using indexing. In the output we the user would be asked to give out text file
+                to
+                generate questions.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="service-item">
+              <i class="fa fa-support"></i>
+              <h4>WEEK-6</h4>
+              <p> This week we Implemented the answer generation code. We implemented the code using cosine similarity.
+                We ran
+                our paragraphs against questions to find out similarity to the given question.
+                we picked out the top answers based cosine similarity value and we generated answers.</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="service-item">
+              <i class="fa fa-support"></i>
+              <h4>WEEK-7</h4>
+              <p> This week we Implemented the answer generation code. We implemented the code using cosine similarity.
+                </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="service-item">
+              <i class="fa fa-support"></i>
+              <h4>WEEK-8</h4>
+              <p> </p>
             </div>
           </div>
         </div>
       </div>
-      <!-- <div class="col-md-6">
-        <div class="service-item">
-          <i class="fa fa-support"></i>
-          <h4>WEEK-5</h4>
-          <p> This week we Implemented the question generation code. We implemented dependency parsing to find "nsub"
-            using spacy and using "ENT" and based on the "PERSON" AND "GPE" we found out named entities. Later we
-            replaced the "nsub" entities with "WH" in the question using indexing. In the output we the user would be
-            asked to give out text file to generate questions.</p>
-        </div>
-      </div> -->
-  <!-- </div> -->
-  <!-- </div> -->
-  </section>
 
-  <!-- <section class="section my-work" data-section="section3">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Gallery</h2>
-            <div class="line-dec"></div>
-            <span>Donec sit amet enim tempor nisl fermentum aliquam. In consectetur sapien eu nisi venenatis lobortis. Sed ullamcorper tristique elit nec facilisis.</span>
-          </div>
-          <div class="row">
-            <div class="isotope-wrapper">
-              <form class="isotope-toolbar">
-                <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
-                  <span>all</span></label>
-                <label><input type="radio" data-type="pretty" name="isotope-filter" />
-                  <span>pretty</span></label>
-                <label><input type="radio" data-type="sexy" name="isotope-filter" />
-                  <span>sexy</span></label>
-                <label><input type="radio" data-type="beach" name="isotope-filter" />
-                  <span>beach</span></label
-                >
+    </section>
+    <section class="section contact-me" data-section="section4">
+      <div class="container">
+        <div class="section-heading">
+          <h2>Contact</h2>
+          <div class="line-dec"></div>
+          <span>Feel free to contact me whenever its necessary </span>
+        </div>
+        <div class="row">
+          <div class="right-content">
+            <div class="container">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-md-6">
+                    <fieldset>
+                      <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
+                        required="" />
+                    </fieldset>
+                  </div>
+                  <div class="col-md-6">
+                    <fieldset>
+                      <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
+                        required="" />
+                    </fieldset>
+                  </div>
+                  <div class="col-md-12">
+                    <fieldset>
+                      <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
+                        required="" />
+                    </fieldset>
+                  </div>
+                  <div class="col-md-12">
+                    <fieldset>
+                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
+                        required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-md-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">
+                        Send Message
+                      </button>
+                    </fieldset>
+                  </div>
+                </div>
               </form>
-              <div class="isotope-box">
-                <div class="isotope-item" data-type="beach">
-                  <figure class="snip1321">
-                    <img src="assets/images/woman-beach.jpg" alt="woman at the beach" />
-                    <figcaption>
-                      <a href="assets/images/woman-beach.jpg"
-                        data-lightbox="image-1"
-                        data-title="Caption"><i class="fa fa-search"></i></a>
-                      <h4>Girl One</h4>
-                      <span>woman at the beach</span>
-                    </figcaption>
-                  </figure>
-                </div>
-
-                <div class="isotope-item" data-type="sexy">
-                  <figure class="snip1321">
-                    <img src="assets/images/woman-chair-sunshine.jpg" alt="sq-sample26" />
-                    <figcaption>
-                      <a href="assets/images/woman-chair-sunshine.jpg"
-                        data-lightbox="image-1"
-                        data-title="Sunshine Woman"><i class="fa fa-search"></i></a>
-                      <h4>Sexy Lady</h4>
-                      <span>there you go sexy girl</span>
-                    </figcaption>
-                  </figure>
-                </div>
-
-                <div class="isotope-item" data-type="pretty">
-                  <figure class="snip1321">
-                    <img src="assets/images/woman-pretty.jpg" alt="Pretty Girl" />
-                    <figcaption>
-                      <a href="assets/images/woman-pretty.jpg"
-                        data-lightbox="image-1"
-                        data-title="Pretty Girl"><i class="fa fa-search"></i></a>
-                      <h4>Pretty Girl</h4>
-                      <span>red flowers white girl</span>
-                    </figcaption>
-                  </figure>
-                </div>
-
-                <div class="isotope-item" data-type="pretty">
-                  <figure class="snip1321">
-                    <img src="assets/images/escalator-blue.jpg" alt="Escalator Blue" />
-                    <figcaption>
-                      <a href="assets/images/escalator-blue.jpg"
-                        data-lightbox="image-1"
-                        data-title="Escalator Blue"><i class="fa fa-search"></i></a>
-                      <h4>Escalator Up</h4>
-                      <span>Blue architecture building</span>
-                    </figcaption>
-                  </figure>
-                </div>
-
-                <div class="isotope-item" data-type="beach">
-                  <figure class="snip1321">
-                    <img src="assets/images/woman-feeling.jpg" alt="woman feeling" />
-                    <figcaption>
-                      <a href="assets/images/woman-feeling.jpg"
-                        data-lightbox="image-1"
-                        data-title="Her Feeling"><i class="fa fa-search"></i></a>
-                      <h4>Her Feeling</h4>
-                      <span>Ut sollicitudin risus</span>
-                    </figcaption>
-                  </figure>
-                </div>
-
-                <div class="isotope-item" data-type="sexy">
-                  <figure class="snip1321">
-                    <img src="assets/images/woman-bikini.jpg" alt="Bikini Girl" />
-                    <figcaption>
-                      <a href="assets/images/woman-bikini.jpg" 
-                      data-lightbox="image-1" data-title="Sexy Bikini">
-                      <i class="fa fa-search"></i></a>
-                      <h4>Bikini Girl</h4>
-                      <span>Donec eget massa ante</span>
-                    </figcaption>
-                  </figure>
-                </div>
-              </div>
             </div>
           </div>
         </div>
-      </section> -->
-
-  <section class="section contact-me" data-section="section4">
-    <div class="container">
-      <div class="section-heading">
-        <h2>Contact</h2>
-        <div class="line-dec"></div>
-        <span>Feel free to contact me whenever its necessary </span>
       </div>
-      <div class="row">
-        <div class="right-content">
-          <div class="container">
-            <form id="contact" action="" method="post">
-              <div class="row">
-                <div class="col-md-6">
-                  <fieldset>
-                    <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
-                      required="" />
-                  </fieldset>
-                </div>
-                <div class="col-md-6">
-                  <fieldset>
-                    <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
-                      required="" />
-                  </fieldset>
-                </div>
-                <div class="col-md-12">
-                  <fieldset>
-                    <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
-                      required="" />
-                  </fieldset>
-                </div>
-                <div class="col-md-12">
-                  <fieldset>
-                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
-                      required=""></textarea>
-                  </fieldset>
-                </div>
-                <div class="col-md-12">
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="button">
-                      Send Message
-                    </button>
-                  </fieldset>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>
   </div>
+
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
