--- a/index.html
+++ b/index.html
@@ -185,21 +185,21 @@
           <div class="col-md-6">
             <div class="service-item">
               <i class="fa fa-support"></i>
-              <h4>WEEK-6</h4>
-              <p> This week we Implemented the answer generation code. We implemented the code using cosine similarity.
+              <h4>WEEK-6 & 7</h4>
+              <p> This week we Implemented the answer generation code. We tried different approaches using basic approach by replacing the "WH" words. However we started implementing the code using cosine similarity.
                 We ran
                 our paragraphs against questions to find out similarity to the given question.
                 we picked out the top answers based cosine similarity value and we generated answers.</p>
             </div>
           </div>
-          <div class="col-md-6">
+<!--           <div class="col-md-6">
             <div class="service-item">
               <i class="fa fa-support"></i>
               <h4>WEEK-7</h4>
               <p> This week we Implemented the answer generation code. We implemented the code using cosine similarity.
                 </p>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-6">
             <div class="service-item">
               <i class="fa fa-support"></i>
