--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="service-item">
               <i class="fa fa-support"></i>
               <h4>WEEK-7</h4>
-              <p> This week we Implemented the answer generation code. We implemented the code using cosine similarity.
+              <p> This week we are Implemented the answer generation code. We implemented the code using cosine similarity.
                 </p>
             </div>
           </div> -->
