--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
-              <li><a href="#section1">Intro</a></li>
+              <li><a href="#section1">Introduction</a></li>
               <li><a href="#section2">Project</a></li>
               <li><a href="#section4">Contact</a></li>
             </ul>
@@ -63,8 +63,7 @@
 
           <h2>I'm Leela venkat sai</h2>
           <div class="line-dec"></div>
-          <span>Aspiring detail oriented Python Developer with an experience in developing micro web framework and API
-            aiming to reach organisational goals with my knowledge on NLP, HCI methodologies and Justinmind.</span>
+          <span>A detail oriented Python developer with an experience in developing micro web framework and API, aspiring to reach organizational goals with my knowledge on NLP , HCI methodologies, Justin mind and critical analytical  skills.</span>
         </div>
         <div class="right-image-post">
           <div class="row">
@@ -204,7 +203,8 @@
             <div class="service-item">
               <i class="fa fa-support"></i>
               <h4>WEEK-8</h4>
-              <p> </p>
+              <p>	Worked on presentation slides for dry demo and prepared content for presentation. Discussed issues and took feedback regarding how to present indetail. 
+              </p>
             </div>
           </div>
         </div>
