--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
               <li><a href="#section1">Introduction</a></li>
               <li><a href="#section2">Project</a></li>
               <li><a href="#section4">Contact</a></li>
+              <!-- <li><a href="https://leelavenkatsai.github.io/Workportfolio066.git.io/">Github Link</a></li> -->
             </ul>
+            <p><a href="https://github.com/iiit-msit/QuestionAnswering" TARGET = "_blank">Github Link</a></p>
           </nav>
           <div class="social-network">
             <ul class="soial-icons">
